@@ -4,6 +4,7 @@ Changes in 2.8.3
 ----------------
 - bugfix bug when Back to Student Search in StudentSummary.php
 - Bugfix conflict staff_id & student_id vars Moodle plugin in AddUsers.php & AddStudents.php
+- Check diagnostic.php link after first login in index.php
 
 Changes in 2.8.2
 ----------------
